--- a/server/index.html
+++ b/server/index.html
@@ -39,7 +39,7 @@
                     <div class="passcode-btn">
                         <input type="text" name="unlock" placeholder="passcode" id="unlock-code"/><input type="submit" value="Unlock"/>
                     </div>
-                    <label for="name">🏷 Name</label><br>
+                    <label for="name">🏷️ Name</label><br>
                     <textarea type="text" id="name" name="name" wrap="soft"></textarea><br>
 
                     <label for="ogt">⛅ One Good Thing</label><br>
