--- a/server/question_template.html
+++ b/server/question_template.html
@@ -35,7 +35,7 @@
             <div class="content">
                 <form class="newsletter" action="./newsletter.py">
                     <div class="title"><h1>Submit a Question</h1></div>
-                    <label for="name">🏷 Name</label><br>
+                    <label for="name">🏷️ Name</label><br>
                     <textarea type="text" id="name" name="name" wrap="soft"></textarea><br>
 
                     <label for="question">❓ Question</label><br>
