Use password type for passcodes

--- a/server/index.html
+++ b/server/index.html
@@ -32,8 +32,8 @@
                 <form class="newsletter" action="../../cgi-bin/newsletter.py">
                     <div class="title"><h1>Newsletter</h1></div>
                     <p>This is a dummy form. To see your relevant $NEWSLETTER_NAME form submit the relevant passcode below.</p>
-                   <div class="passcode-btn">
-                        <input type="text" name="unlock" placeholder="passcode" id="unlock-code"/><input type="submit" value="Unlock"/>
+                    <div class="passcode-btn">
+                        <input type="password" name="unlock" placeholder="passcode" id="unlock-code"/><input type="submit" value="Unlock"/>
                     </div>
                     <label for="name">🏷️ Name</label><br>
                     <textarea type="text" id="name" name="name" wrap="soft"></textarea><br>
