--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
         <!--form {{{ -->
         <div class="container">
             <div class="content">
-                <form class="newsletter" action="../../cgi-bin/newsletter.py">
+                <form class="newsletter" action="../../cgi-bin/newsletter.py" method="post">
                     <div class="title"><h1>Newsletter</h1></div>
                     <p>This is a dummy form. To see your relevant $NEWSLETTER_NAME form submit the relevant passcode below.</p>
                     <div class="passcode-btn">
                         <input type="password" name="unlock" placeholder="passcode" id="unlock-code"/><input type="submit" value="Unlock"/>
                     </div>
                     <label for="name">🏷️ Name</label><br>
-                    <textarea type="text" id="name" name="name" wrap="soft"></textarea><br>
+                    <textarea type="text" id="name" wrap="soft"></textarea><br>
 
                     <label for="ogt">⛅ One Good Thing</label><br>
-                    <textarea type="text" id="ogt" name="ogt" wrap="soft"></textarea><br>
+                    <textarea type="text" id="ogt" wrap="soft"></textarea><br>
 
                     <label for="cio">👀 Check It Out</label><br>
-                    <textarea type="text" id="cio" name="cio" wrap="soft"></textarea><br>
+                    <textarea type="text" id="cio" wrap="soft"></textarea><br>
 
                     <label for="image">📸 Photo Wall</label><br>
                     <label class="file-upload">
-                        <input type="file" id="image" name="image">
+                        <input type="file" id="image">
                             <div>Upload image</div>
                             <p id="filename"></p>
                     </label>
-                    <textarea type="text" id="caption" name="caption" placeholder="✍️ Caption" wrap="soft"></textarea><br>
+                    <textarea type="text" id="caption" placeholder="✍️ Caption" wrap="soft"></textarea><br>
                 </form>
             </div>
         </div>
