--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
         <div class="container">
             <div class="content">
                 <form class="newsletter" action="../../cgi-bin/newsletter.py" method="post">
-                    <div class="title"><h1>Newsletter</h1></div>
-                    <p>This is a dummy form. To see your relevant $NEWSLETTER_NAME form submit the relevant passcode below.</p>
+                    <div class="title">
+                        <h1>Newsletter</h1>
+                    </div>
+                    <p>This is a dummy form. To see your relevant $NEWSLETTER_NAME form submit the relevant passcode
+                        below.</p>
                     <div class="passcode-btn">
-                        <input type="password" name="unlock" placeholder="passcode" id="unlock-code"/><input type="submit" value="Unlock"/>
+                        <input type="password" name="unlock" placeholder="passcode" id="unlock-code" /><input
+                            type="submit" value="Unlock" />
                     </div>
                     <label for="name">🏷️ Name</label><br>
                     <textarea type="text" id="name" wrap="soft"></textarea><br>
@@ -45,11 +49,22 @@
                     <textarea type="text" id="cio" wrap="soft"></textarea><br>
 
                     <label for="image">📸 Photo Wall</label><br>
-                    <label class="file-upload">
-                        <input type="file" id="image">
+                    <div class="file-upload-container">
+                        <label class="file-upload">
+                            <input type="file" id="image"
+                                onchange="
+                                    document.getElementById('filename').innerHTML = document.getElementById('image').value.split('\\')[2];
+                                    document.getElementById('remove-file').style.display = 'unset'
+                            ">
                             <div>Upload image</div>
                             <p id="filename"></p>
-                    </label>
+                        </label>
+                        <div class="button" id="remove-file" style="display: none;" onclick="
+                            document.getElementById('filename').innerHTML = '';
+                            document.getElementById('image').value = '';
+                            document.getElementById('remove-file').style.display = 'none'
+                        ">X</div>
+                    </div>
                     <textarea type="text" id="caption" placeholder="✍️ Caption" wrap="soft"></textarea><br>
                 </form>
             </div>
